--- a/SPAM_classifier_using_simple_perceptron.ipynb
+++ b/SPAM_classifier_using_simple_perceptron.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMLZk1EcS/wN9dTBlvu+eR7",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyOFAkrQX6qctHABghjBtIMt"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,18 +16,8 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/jo-iiitmk/Spam_classification_perceptron/blob/main/SPAM_classifier_using_simple_perceptron.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 35,
       "metadata": {
         "id": "Yj2Wrwq75EGN"
       },
@@ -49,9 +38,9 @@
           "height": 235
         },
         "id": "3mJ6X1DZ_GM4",
-        "outputId": "2ac36ef1-9b9a-4d21-ceed-5ae853ccd9a0"
+        "outputId": "a8b17070-8d72-4487-f551-4f485ac96993"
       },
-      "execution_count": 2,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -75,7 +64,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ea62ae56-07a5-4289-b07c-80f21c423023\">\n",
+              "  <div id=\"df-e439981e-5c62-45b7-bf0b-763a15ffc9d1\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -243,7 +232,7 @@
               "</table>\n",
               "<p>5 rows × 58 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ea62ae56-07a5-4289-b07c-80f21c423023')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e439981e-5c62-45b7-bf0b-763a15ffc9d1')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -294,12 +283,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-ea62ae56-07a5-4289-b07c-80f21c423023 button.colab-df-convert');\n",
+              "          document.querySelector('#df-e439981e-5c62-45b7-bf0b-763a15ffc9d1 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-ea62ae56-07a5-4289-b07c-80f21c423023');\n",
+              "          const element = document.querySelector('#df-e439981e-5c62-45b7-bf0b-763a15ffc9d1');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -322,7 +311,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 36
         }
       ]
     },
@@ -336,9 +325,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xGah90DB_UuE",
-        "outputId": "95b11256-019a-480e-df6e-521fab136d0e"
+        "outputId": "c806030a-7d69-425e-b73d-4aef05ccb47e"
       },
-      "execution_count": 3,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -348,7 +337,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 37
         }
       ]
     },
@@ -363,9 +352,9 @@
           "height": 394
         },
         "id": "0GYsGAPXO4EJ",
-        "outputId": "631996f0-2fbf-45d3-8d3d-8de407428438"
+        "outputId": "4d36ce00-98cd-4675-af7d-285efbc53ccd"
       },
-      "execution_count": 4,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -415,7 +404,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2f042495-a4f3-4860-908b-d065c153d453\">\n",
+              "  <div id=\"df-0c04beb8-33d2-4b50-a641-5436edb425ca\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -655,7 +644,7 @@
               "</table>\n",
               "<p>8 rows × 58 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2f042495-a4f3-4860-908b-d065c153d453')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0c04beb8-33d2-4b50-a641-5436edb425ca')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -706,12 +695,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-2f042495-a4f3-4860-908b-d065c153d453 button.colab-df-convert');\n",
+              "          document.querySelector('#df-0c04beb8-33d2-4b50-a641-5436edb425ca button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-2f042495-a4f3-4860-908b-d065c153d453');\n",
+              "          const element = document.querySelector('#df-0c04beb8-33d2-4b50-a641-5436edb425ca');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -734,7 +723,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 38
         }
       ]
     },
@@ -748,9 +737,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YDgWh_JffBs9",
-        "outputId": "f323b164-9f3a-40d0-b2d5-4f731c3051ba"
+        "outputId": "eeec45cf-0227-4417-e58b-c0dd7dd99529"
       },
-      "execution_count": 5,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -762,7 +751,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 39
         }
       ]
     },
@@ -776,9 +765,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "usxZSDizkFrD",
-        "outputId": "2b294a01-3815-45cd-b95a-5d7f046303d3"
+        "outputId": "c885f984-ebbb-4f82-dbf7-8daa6454e6d2"
       },
-      "execution_count": 21,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -846,7 +835,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 40
         }
       ]
     },
@@ -863,7 +852,7 @@
       "metadata": {
         "id": "SQke2ZNF_kkj"
       },
-      "execution_count": 26,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -876,22 +865,7 @@
       "metadata": {
         "id": "HYrQ8MMuHjcB"
       },
-      "execution_count": 7,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#scaling data\n",
-        "from sklearn.preprocessing import StandardScaler\n",
-        "scale = StandardScaler()\n",
-        "scale.fit(X)\n",
-        "X =scale.transform(X)"
-      ],
-      "metadata": {
-        "id": "d6LLUabOeKEq"
-      },
-      "execution_count": 22,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -903,7 +877,7 @@
       "metadata": {
         "id": "YTzBmZWeHBFh"
       },
-      "execution_count": 23,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -915,7 +889,7 @@
       "metadata": {
         "id": "GjTY6m5PHZP9"
       },
-      "execution_count": 24,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -930,16 +904,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vnbyJmKTSEvW",
-        "outputId": "a48d71ba-5a8c-41ab-8584-05ffd69c34b1"
+        "outputId": "ef845137-b4f7-4273-bd07-a85047d16be1"
       },
-      "execution_count": 27,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Mean Accuracy:\n",
-            "0.886, (0.027)\n"
+            "0.623, (0.102)\n"
           ]
         }
       ]
@@ -954,7 +928,7 @@
       "metadata": {
         "id": "gLlzRS4rSTFA"
       },
-      "execution_count": 28,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -966,7 +940,7 @@
       "metadata": {
         "id": "YEUxrhAJW4Ju"
       },
-      "execution_count": 29,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -984,21 +958,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yET1IVtGXPid",
-        "outputId": "e738c86e-52c7-40eb-9e31-2e6d5eeaf9d9"
+        "outputId": "73aa19bf-d4a8-433f-d958-b3b8e441fda9"
       },
-      "execution_count": 30,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mean Accuracy: 0.890\n",
+            "Mean Accuracy: 0.623\n",
             "Config: {'eta0': 0.0001}\n",
-            "--> 0.890 with: {'eta0': 0.0001}\n",
-            "--> 0.890 with: {'eta0': 0.001}\n",
-            "--> 0.888 with: {'eta0': 0.01}\n",
-            "--> 0.885 with: {'eta0': 0.1}\n",
-            "--> 0.886 with: {'eta0': 1.0}\n"
+            "--> 0.623 with: {'eta0': 0.0001}\n",
+            "--> 0.623 with: {'eta0': 0.001}\n",
+            "--> 0.623 with: {'eta0': 0.01}\n",
+            "--> 0.623 with: {'eta0': 0.1}\n",
+            "--> 0.623 with: {'eta0': 1.0}\n"
           ]
         }
       ]
@@ -1013,7 +987,7 @@
       "metadata": {
         "id": "E0X_XM31Zjaq"
       },
-      "execution_count": 31,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -1025,7 +999,7 @@
       "metadata": {
         "id": "XwH3tga_aM5e"
       },
-      "execution_count": 32,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -1041,15 +1015,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6b-5r8Rzasq3",
-        "outputId": "c1c595cb-f151-4779-b37f-b3d63fe74a85"
+        "outputId": "bab58ceb-c07b-4d2b-e73d-103424becee3"
       },
-      "execution_count": 33,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mean Accuracy: 0.890\n",
+            "Mean Accuracy: 0.629\n",
             "Config: {'max_iter': 10}\n"
           ]
         }
@@ -1068,19 +1042,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1_QR1GvXbNdK",
-        "outputId": "36b67d3e-2719-417d-d7a6-65b27b9e1940"
+        "outputId": "ad677311-1ab0-45c4-fec9-fd2e850ef436"
       },
-      "execution_count": 34,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            ">0.885 with: {'max_iter': 1}\n",
-            ">0.890 with: {'max_iter': 10}\n",
-            ">0.890 with: {'max_iter': 100}\n",
-            ">0.890 with: {'max_iter': 1000}\n",
-            ">0.890 with: {'max_iter': 10000}\n"
+            ">0.569 with: {'max_iter': 1}\n",
+            ">0.629 with: {'max_iter': 10}\n",
+            ">0.623 with: {'max_iter': 100}\n",
+            ">0.623 with: {'max_iter': 1000}\n",
+            ">0.623 with: {'max_iter': 10000}\n"
           ]
         }
       ]
@@ -1089,7 +1063,7 @@
       "cell_type": "markdown",
       "source": [
         "Conclusion:\n",
-        "Model with learning rate 0.0001 and epoch 10 gave the best result with mean accuracy 89%"
+        "Model with learning rate 0.0001 and epoch 10 gave the best result with mean accuracy 62.9%"
       ],
       "metadata": {
         "id": "TDOAG6aplK-b"
